<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.deftserver</groupId>
	<artifactId>deft</artifactId>
	<version>0.4.0-SNAPSHOT</version>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<type>jar</type>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.5.12</version>
			<type>jar</type>
		</dependency>

		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>4.5.14</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>javax.activation</groupId>
			<artifactId>activation</artifactId>
			<version>1.1.1</version>
		</dependency>
	</dependencies>



	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<encoding>UTF-8</encoding>
					<release>25</release>
				</configuration>
			</plugin>

			<plugin>
				<!--
					NOTE: We don't need a groupId specification because the group is
					org.apache.maven.plugins ...which is assumed by default.
				-->
				<artifactId>maven-assembly-plugin</artifactId>
				<version>2.2-beta-5</version>
				<configuration>
					<!--
						<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
						<descriptorRef>bin</descriptorRef> </descriptorRefs>
					-->
					<descriptors>
						<descriptor>src/main/assembly/deft-binary.xml</descriptor>
						<descriptor>src/main/assembly/deft-binary-with-deps.xml</descriptor>
						<descriptor>src/main/assembly/deft-src.xml</descriptor>
					</descriptors>

				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.4</version>
				<configuration>
					<forkCount>1</forkCount>
					<reuseForks>true</reuseForks>
				</configuration>
			</plugin>

		</plugins>
	</build>

	<repositories>
		<repository>
			<id>Sonatype</id>
			<name>Sonatype Release</name>
			<url>http://oss.sonatype.org/content/repositories/releases </url>
		</repository>

	</repositories>
</project>
